GS-8461 Correcting header_728x90 ad slot showing extra space in IE on perl pages

--- a/src/webapp/res/css/frame.css
+++ b/src/webapp/res/css/frame.css
@@ -30,7 +30,7 @@ body.unframed #pageGS {
     background-color: #fff;
     height: 100px;
     width: 900px;
-    margin:0 0 6px 0;
+    margin:0 auto 6px auto;
     padding: 7px 0 0 0;
     text-align: center;
 }
